--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '* */2 * * *'
+    - cron: "0 */2 * * *"
 
 jobs:
   updater:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          ref: 'master'
+          ref: "master"
 
       - name: Update
         run: |
