--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -1,6 +1,7 @@
+name: schedule-update
 on:
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: '0 */2 * * *'
 
 jobs:
   updater:
@@ -13,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          ref: "master"
+          ref: 'master'
 
       - name: Update
         run: |
