--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: 'master'
+        run: | # fetch all branches
+          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
 
       - name: Update
         run: |
