--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -1,7 +1,7 @@
 name: schedule-update
 on:
   schedule:
-    - cron: '0 */2 * * *'
+    - cron: "0 */2 * * *"
 
 jobs:
   updater:
@@ -14,12 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          ref: 'master'
-        run: | # fetch all branches
-          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
+          ref: "master"
 
       - name: Update
         run: |
+          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           npm ci
           npm run update
           npm run check
