--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: "master"
+          # Need for triggering workflow other 
+          token: ${{ secrets.PAT }}
 
       - name: Update
         run: |
