--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -21,6 +21,7 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: check
+        id: check
         run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           npm ci
