--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -26,15 +26,12 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           npm ci
           npm run update
-          if [ -z "$(git status --porcelain)" ]; then 
-            echo "clean"
-            echo "::set-output name=update::false"
-          else 
-            echo "new update"
-            echo "::set-output name=update::true"
-          fi
+          unset HAS_CHANGES
+          if  [ ! -z "$(git status --porcelain)" ]; then HAS_CHANGES=true ; fi
+          echo set-output name=HAS_CHANGES::${HAS_CHANGES}
+          echo ::set-output name=HAS_CHANGES::${HAS_CHANGES}
 
       - name: update
-        if: steps.check.outputs.update == true
+        if: steps.check.outputs.HAS_CHANGES
         run: |
           sh ./scripts/update.sh
