--- a/.github/workflows/schedule-update.yml
+++ b/.github/workflows/schedule-update.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: 'master'
+          fetch-depth: 0
           # Need for triggering workflow other
           token: ${{ secrets.PAT }}
 
